--- a/app/src/main/res/xml/widget_test.xml
+++ b/app/src/main/res/xml/widget_test.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialLayout="@layout/widget_liner"
+    android:initialLayout="@layout/widget_linear"
     android:minHeight="50dp"
     android:minWidth="50dp"
-    android:updatePeriodMillis="1000"></appwidget-provider>
+    android:updatePeriodMillis="1800000"/>
